# llm-npcs

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yaml  trunk_annotate.yml  trunk_cache.yml
.trunk/: trunk.yaml
npcs/: main.py
npcs/memory/: __init__.py  character.py  conversation.py  index.py  nlp.py  schema.py  search.py
npcs/utils/: __init__.py  constants.py
tests/: conftest.py  test_character.py  test_entity_extraction.py  test_index_memory.py  test_index_search.py  test_sentiment_analysis.py
tests/data/: jimmy_buffett.yaml
