[build-system]
requires = ["setuptools>=62.1.0", "wheel", "setuptools_scm>=6.4.2"]
build-backend = "setuptools.build_meta"

[project]
name = "npcs"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version", "dependencies"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
llm-npcs = "npcs.main:run"

[tool.pytest.ini_options]
minversion = "8.0"
markers = ["functional: integration tests"]
addopts = "-ra -q -p no:warnings --doctest-modules --ignore=_version.py"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = ["tests"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "npcs/_version.py"

[tool.bandit.assert_used]
skips = ['**/test_*.py']
